--- a/src/app/components/custom-appliance-form/custom-appliance-form.component.scss
+++ b/src/app/components/custom-appliance-form/custom-appliance-form.component.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--overlay-bg);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   display: flex;
@@ -70,7 +70,7 @@
   transition: background-color $dur-fast $ease-out, color $dur-fast $ease-out;
 
   &:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: var(--menu-hover-bg);
     color: $text-color-black;
   }
 }
